@@ -1,3 +1,8 @@
+2008-09-23  Romain Francoise  <romain@orebokech.com>
+
+	* subr.el (with-output-to-string): Make sure that the temporary
+	buffer gets killed.
+
 2008-09-23  Markus Sauermann <markus@sauermann-consulting.de>  (tiny change)
 
 	* emacs-lisp/emacslisp-mode.el (calculate-lisp-indent): Fix
@@ -34,7 +39,7 @@
 
 2008-09-20  David De La Harpe Golden  <david@harpegolden.net>
 
-        * files.el (move-file-to-trash): Avoid recursive trashing if
+	* files.el (move-file-to-trash): Avoid recursive trashing if
 	rename-file calls delete-file.
 
 2008-09-20  Glenn Morris  <rgm@gnu.org>
@@ -111,7 +116,7 @@
 
 2008-09-17  Jay Belanger  <jay.p.belanger@gmail.com>
 
-	* calc/calc-units.el (calc-convert-temperature):  Use default
+	* calc/calc-units.el (calc-convert-temperature): Use default
 	units when appropriate.
 
 2008-09-16  Markus Triska  <markus.triska@gmx.at>
